<resources>
    <string name="app_name">MyCal</string>
    <string name="tv_num2">Number 2</string>
    <string name="btn1_ok">OK</string>
    <string name="et_num2" />
    <string name="et_num1" />
    <string name="tv_num1">Number 1</string>
    <string name="tv_answer" />
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="tv_toast">Openin Calculator</string>
</resources>