<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/tv_num1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_num1"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/et_num1"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/et_num2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_num2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="472dp"
        android:onClick="subtract"
        android:text="@string/btn_minus"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_plus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="472dp"
        android:onClick="add"
        android:text="@string/btn_plus"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="52dp"
        android:onClick="divide"
        android:text="@string/btn_divide"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:onClick="multiply"
        android:text="@string/btn_multiply"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="212dp"
        android:layout_height="47dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="332dp"
        android:text="@string/tv_answer"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>