<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/tv_num1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_num1"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/et_num1"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/et_num2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn1_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="376dp"
        android:onClick="openSecond"
        android:text="@string/btn1_ok"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_num2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

</androidx.constraintlayout.widget.ConstraintLayout>
